demos/kubevirt-without-fear/manifests/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubevirt-without-fear
  labels:
    app.kubernetes.io/part-of: kubevirt-without-fear
