demos/kubevirt-without-fear/manifests/base/20-legacy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legacy-api
  labels:
    app.kubernetes.io/part-of: kubevirt-without-fear
spec:
  type: ClusterIP
  selector:
    app: legacy-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
